update_20190423_basic_of_javascript

--- a/Si_basic/WebProject/setp01_HTMLCS/WebContent/CSS/ex03_CSSExternal.html
+++ b/Si_basic/WebProject/setp01_HTMLCS/WebContent/CSS/ex03_CSSExternal.html
@@ -5,7 +5,7 @@
 	<title>Insert title here</title>
 	<!-- 외부의 css파일에 연결하기 -->
 	<link rel="stylesheet" type="text/css" href="basic.css">
-	<style>*{color: purple;}</style>
+	<style>*{color: purplea;}</style>
 </head>
 	<body>
 		<!-- 태그에 직접 css적용하면 간단하게 처리할 때 직관적으로 좋지만, 동일한 태그에 적용할 때는 반복해서 코드가 드간다. -->
