--- a/Si_basic/WebProject/step02_JavaScript/WebContent/ex06_setTimeout_setInterval.html
+++ b/Si_basic/WebProject/step02_JavaScript/WebContent/ex06_setTimeout_setInterval.html
@@ -30,6 +30,12 @@
 		    	if(hour<10){
 		    		hour="0"+hour;
 		    	}
+		    }else{
+		    	divide="AM";
+		    	
+		    	if(hour<10){
+		    		hour="0"+hour;
+		    	}
 		    }
 			var text = document.getElementById("clock");
 			text.value=hour+"시 "+minute+"분 "+second+"초 "+divide;
